<?xml version="1.0" encoding="utf-8"?>
<!-- Long-press the launcher icon to connect without opening the app. The intent
     carries the same AUTO_CONNECT extra the home-screen widget uses. -->
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="quick_connect"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_connect_short"
        android:shortcutLongLabel="@string/shortcut_connect_long">
        <intent
            android:action="com.parvaz.tunnel.QUICK_CONNECT"
            android:targetPackage="com.parvaz.tunnel"
            android:targetClass="com.parvaz.tunnel.MainActivity">
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="quick_switch"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_switch_short"
        android:shortcutLongLabel="@string/shortcut_switch">
        <intent
            android:action="com.parvaz.tunnel.QUICK_SWITCH"
            android:targetPackage="com.parvaz.tunnel"
            android:targetClass="com.parvaz.tunnel.MainActivity">
        </intent>
    </shortcut>
</shortcuts>
