<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingTop="10.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="22.0dip" android:paddingEnd="22.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/rule_kind" style="@style/Label" />
    <Spinner android:id="@id/kind" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/rule_value" style="@style/Label" />
    <EditText android:id="@id/value" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/rule_value_hint" android:inputType="textNoSuggestions" android:textDirection="ltr" android:importantForAutofill="no" style="@style/Field" />
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/rule_outbound" style="@style/Label" />
    <Spinner android:id="@id/outbound" android:layout_width="fill_parent" android:layout_height="wrap_content" />
</LinearLayout>